force-app/main/default/objects/Consignment_Request_Product__c/Consignment_Request_Product__c.object-meta.xml
<CustomObject>
    <label>Konsignationsprodukt</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Konsignationsprodukte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>