force-app/main/default/objects/Consignment_Request_Product__c/fields/Consignment_Request__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Request__c</fullName>
    <label>Consignment Request</label>
    <referenceTo>Consignment_Request__c</referenceTo>
    <relationshipName>Consignment_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>