force-app/main/default/objects/Consignment_Request_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Knee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>