force-app/main/default/objects/Consignment_Request_Product__c/fields/Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Set_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Set ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>