force-app/main/default/objects/Consignment_Request_Product__c/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <label>Sub-Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Vanguard CR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>